--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.4.0",
+    "nprogress": "^0.2.0",
+    "@vueuse/core": "^10.5.0",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
@@ -37,7 +40,7 @@
     "npm-run-all2": "^6.0.6",
     "prettier": "^3.0.3",
     "sass": "^1.64.2",
-    "typescript": "~5.2.0",
+    "typescript": "~5.1.6",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.11"
