--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
+    "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
@@ -21,7 +21,9 @@
     "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.4.0",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
+    "axios": "^1.4.0",
     "@vueuse/core": "^10.5.0",
     "vue-router": "^4.2.4"
   },
@@ -35,6 +37,8 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.49.0",
+    "terser": "^5.19.4",
+    "vite-plugin-compression": "^0.5.1",
     "eslint-plugin-vue": "^9.17.0",
     "lint-staged": "^14.0.1",
     "npm-run-all2": "^6.0.6",
