--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,14 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": [
-    "types/**.d.ts",
-    "src/*",
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "vite/*"
-  ],
+  "include": ["types/**.d.ts", "src/*", "src/**/*.ts", "src/**/*.tsx", "src/**/*.vue", "vite/*"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
