--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,11 @@
 VITE_MODE_NAME=development
+VITE_APP_PORT=3005
 # 标题
 VITE_APP_TITLE=ace-admin
 # 接口请求地址，对应axios的baseURL参数
-VITE_APP_API_BASEURL=/api
+VITE_APP_BASE_API='/api'
+# 开发接口环境可自定义
+VITE_API_URL='https://mock.apifox.cn/m1/2120640-0-2c46b26a'
 # 是否开启代理
 VITE_OPEN_PROXY=false
 # 是否使用mock
@@ -13,9 +16,9 @@ VITE_BUILD_SOURCEMAP=false
 VITE_BUILD_DROP_CONSOLE=true
 # 是否在打包时删除 debugger 代码
 VITE_BUILD_DROP_DEBUGGER=true
+VITE_BUILD_COMPRESS=false
 # 是否在打包时开启压缩 gzip | brotli
 #用gizp： VITE_BUILD_COMPRESS = gzip
 #用brotli： VITE_BUILD_COMPRESS = brotli
 #都用： VITE_BUILD_COMPRESS = gzip,brotli
 #都不用： VITE_BUILD_COMPRESS = false
-VITE_BUILD_COMPRESS=false
