--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@vueuse/core": "^10.5.0",
     "ant-design-vue": "4.x",
+    "axios": "^1.4.0",
     "husky": "^8.0.3",
+    "lodash-es": "^4.17.21",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "pinia-plugin-persistedstate": "^3.2.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.4.0",
-    "lodash": "^4.17.21",
-    "nprogress": "^0.2.0",
-    "axios": "^1.4.0",
-    "@vueuse/core": "^10.5.0",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
@@ -37,16 +37,16 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.49.0",
-    "terser": "^5.19.4",
-    "vite-plugin-compression": "^0.5.1",
     "eslint-plugin-vue": "^9.17.0",
     "lint-staged": "^14.0.1",
     "npm-run-all2": "^6.0.6",
     "prettier": "^3.0.3",
     "sass": "^1.64.2",
+    "terser": "^5.19.4",
     "typescript": "~5.1.6",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
+    "vite-plugin-compression": "^0.5.1",
     "vue-tsc": "^1.8.11"
   },
   "lint-staged": {
