--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "prepare": "husky install",
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
+    "build:test": "vite build  --mode test",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
