--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@iconify-json/ep": "^1.1.11",
+    "@iconify-json/ion": "^1.1.11",
+    "@iconify-json/mdi": "^1.1.53",
+    "@iconify-json/ri": "^1.1.11",
+    "@iconify/vue": "^4.1.1",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/lodash-es": "^4.17.10",
@@ -43,10 +48,13 @@
     "lint-staged": "^14.0.1",
     "npm-run-all2": "^6.0.6",
     "prettier": "^3.0.3",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "unplugin-icons": "^0.16.5",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.2",
     "sass": "^1.64.2",
     "terser": "^5.19.4",
     "typescript": "~5.1.6",
-    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
     "vite-plugin-compression": "^0.5.1",
     "vue-tsc": "^1.8.11"
