--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "prepare": "husky install",
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
+    "build:prod": "vite build  --mode production",
     "build:test": "vite build  --mode test",
     "preview": "vite preview",
     "build-only": "vite build",
