--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 VITE_MODE_NAME=development
 VITE_APP_PORT=3005
-VITE_HASH_ROUTE=fasle
+VITE_HASH_ROUTE=false
 # 标题
 VITE_APP_TITLE=ace-admin
 # 接口请求地址，对应axios的baseURL参数
