--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "@iconify-json/ep": "^1.1.11",
     "@iconify-json/ion": "^1.1.11",
     "@iconify-json/mdi": "^1.1.53",
