refactor: 升级vue3.4;vite5;限制node版本

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,10 +8,12 @@
     "playwright.config.*",
     "vite/**/*.ts"
   ],
-  "compilerOptions": {
+    "compilerOptions": {
+    "types": ["node"],
     "composite": true,
+    "skipLibCheck": true,
     "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "types": ["node"]
-  }
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true
+  },
 }
