--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "ace-admin",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
+  "engines": {
+    "npm": ">=9.0.0",
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "prepare": "husky install",
     "dev": "vite",
@@ -16,54 +21,54 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
-    "@vueuse/core": "^10.5.0",
-    "ant-design-vue": "4.x",
-    "axios": "^1.4.0",
+    "@vueuse/core": "^10.7.1",
+    "ant-design-vue": "~4.1.0",
+    "axios": "^1.6.5",
     "echarts": "^5.4.3",
-    "gsap": "^3.12.3",
-    "husky": "^8.0.3",
+    "gsap": "^3.12.4",
     "lodash-es": "^4.17.21",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
-    "pinia": "^2.1.6",
-    "pinia-plugin-persistedstate": "^3.2.0",
-    "vue": "^3.3.4",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "vue": "^3.4.6",
     "vue-echarts": "latest",
-    "vue-i18n": "^9.4.0",
-    "vue-router": "^4.2.4"
+    "vue-i18n": "^9.9.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
-    "@iconify-json/ep": "^1.1.11",
-    "@iconify-json/ion": "^1.1.11",
-    "@iconify-json/mdi": "^1.1.53",
-    "@iconify-json/ri": "^1.1.11",
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
+    "@iconify-json/ep": "^1.1.14",
+    "@iconify-json/ion": "^1.1.15",
+    "@iconify-json/mdi": "^1.1.64",
+    "@iconify-json/ri": "^1.1.18",
     "@iconify/vue": "^4.1.1",
-    "@rushstack/eslint-patch": "^1.3.3",
+    "@rushstack/eslint-patch": "^1.6.1",
     "@tsconfig/node18": "^18.2.2",
-    "@types/lodash-es": "^4.17.10",
-    "@types/node": "^18.17.17",
-    "@vitejs/plugin-vue": "^4.3.4",
-    "@vitejs/plugin-vue-jsx": "^3.0.2",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^18.19.5",
+    "@vitejs/plugin-vue": "^5.0.2",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.4.0",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-vue": "^9.19.2",
     "lint-staged": "^14.0.1",
-    "npm-run-all2": "^6.0.6",
-    "prettier": "^3.0.3",
-    "sass": "^1.64.2",
-    "terser": "^5.19.4",
+    "npm-run-all2": "^6.1.1",
+    "prettier": "^3.1.1",
+    "husky": "^8.0.3",
+    "sass": "^1.69.7",
+    "terser": "^5.26.0",
     "typescript": "~5.1.6",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-icons": "^0.16.5",
+    "unplugin-auto-import": "^0.16.7",
+    "unplugin-icons": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.4.9",
+    "vite": "^5.0.11",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vue-tsc": "^1.8.11"
+    "vue-tsc": "^1.8.27"
   },
   "lint-staged": {
     "*.{js,ts,tsx,jsx,vue}": [
