--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "engines": {
     "npm": ">=9.0.0",
+    "pnpm": ">=8.9.0",
     "node": ">=18.0.0"
   },
   "scripts": {
@@ -55,10 +56,10 @@
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.19.2",
+    "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.1.1",
-    "husky": "^8.0.3",
     "sass": "^1.69.7",
     "terser": "^5.26.0",
     "typescript": "~5.1.6",
@@ -68,6 +69,7 @@
     "vite": "^5.0.11",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-svg-icons": "^2.0.1",
+    "vite-plugin-vue-devtools": "^7.0.11",
     "vue-tsc": "^1.8.27"
   },
   "lint-staged": {
