--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "prepare": "husky install",
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "build:prod": "vite build  --mode production",
@@ -55,7 +54,6 @@
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.19.2",
-    "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.1.1",
@@ -70,6 +68,11 @@
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^7.0.11",
     "vue-tsc": "^1.8.27"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged",
+    "pre-push": "cd ../../ && pnpm format",
+    "preserveUnused": true
   },
   "lint-staged": {
     "*.{js,ts,tsx,jsx,vue}": [
