--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "preinstall": "npx only-allow pnpm",
+    "postinstall": "npx simple-git-hooks"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
@@ -57,6 +59,7 @@
     "lint-staged": "^14.0.1",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.1.1",
+    "simple-git-hooks": "^2.9.0",
     "sass": "^1.69.7",
     "terser": "^5.26.0",
     "typescript": "~5.1.6",
@@ -70,7 +73,7 @@
     "vue-tsc": "^1.8.27"
   },
   "simple-git-hooks": {
-    "pre-commit": "npx lint-staged",
+    "pre-commit": "pnpm lint-staged && pnpm type:check",
     "commit-msg": "commitlint",
     "pre-push": "cd ../../ && pnpm format",
     "preserveUnused": true
