--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
-    "preinstall": "npx only-allow pnpm",
-    "postinstall": "npx simple-git-hooks"
+    "cz": "cz",
+    "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@vueuse/core": "^10.7.1",
     "ant-design-vue": "~4.1.0",
     "axios": "^1.6.5",
+    "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "echarts": "^5.4.3",
     "gsap": "^3.12.4",
     "lodash-es": "^4.17.21",
@@ -59,8 +61,8 @@
     "lint-staged": "^14.0.1",
     "npm-run-all2": "^6.1.1",
     "prettier": "^3.1.1",
-    "simple-git-hooks": "^2.9.0",
     "sass": "^1.69.7",
+    "simple-git-hooks": "^2.9.0",
     "terser": "^5.26.0",
     "typescript": "~5.1.6",
     "unplugin-auto-import": "^0.16.7",
@@ -73,16 +75,13 @@
     "vue-tsc": "^1.8.27"
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged && pnpm type:check",
-    "commit-msg": "commitlint",
-    "pre-push": "cd ../../ && pnpm format",
-    "preserveUnused": true
+    "pre-commit": "npx lint-staged",
+    "prepare-commit-msg": "exec <  node_modules/.bin/cz --hook || true",
+    "commit-msg": "npx commitlint -e $1"
   },
   "lint-staged": {
     "*.{js,ts,tsx,jsx,vue}": [
-      "eslint --fix",
-      "prettier --write",
-      "git add ."
+      "prettier --write"
     ],
     "package.json": [
       "prettier --write"
@@ -90,5 +89,10 @@
     "*.md": [
       "prettier --write"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
