--- a/package.json
+++ b/package.json
@@ -69,14 +69,14 @@
     "sass": "^1.69.7",
     "simple-git-hooks": "^2.9.0",
     "terser": "^5.26.0",
-    "typescript": "~5.1.6",
+    "typescript": "^5.3.3",
     "unplugin-auto-import": "^0.16.7",
     "unplugin-icons": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^5.0.11",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "^7.0.11",
+    "vite-plugin-vue-devtools": "^7.0.13",
     "vue-tsc": "^1.8.27"
   },
   "simple-git-hooks": {
