--- a/.env.test
+++ b/.env.test
@@ -4,8 +4,8 @@ VITE_APP_PORT=3005
 VITE_HASH_ROUTE=true
 # 标题
 VITE_APP_TITLE=ace-admin
-# versal直接设置好路径
-VITE_APP_BASE_API='/api'
+# vercel直接设置好路径
+VITE_APP_BASE_API='http://look4u.top:8081'
 # 开发接口环境可自定义
 VITE_API_URL='http://look4u.top:8081'
 # 是否开启代理
