--- a/.env.test
+++ b/.env.test
@@ -5,9 +5,9 @@ VITE_HASH_ROUTE=true
 # 标题
 VITE_APP_TITLE=ace-admin
 # vercel直接设置好路径
-VITE_APP_BASE_API='https://look4u.top:8081'
+VITE_APP_BASE_API='/api'
 # 开发接口环境可自定义
-VITE_API_URL='https://look4u.top:8081'
+VITE_API_URL='http://look4u.top:8081'
 # 是否开启代理
 VITE_OPEN_PROXY=false
 # 是否使用mock
