--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@vueuse/core": "^10.7.1",
+    "@vueuse/motion": "^2.1.0",
     "ant-design-vue": "~4.1.2",
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
