--- a/.env.test
+++ b/.env.test
@@ -19,6 +19,7 @@ VITE_BUILD_DROP_CONSOLE=true
 # 是否在打包时删除 debugger 代码
 VITE_BUILD_DROP_DEBUGGER=true
 VITE_BUILD_COMPRESS=false
+ENABLE_EXPERIMENTAL_COREPACK=1
 # 是否在打包时开启压缩 gzip | brotli
 #用gizp： VITE_BUILD_COMPRESS = gzip
 #用brotli： VITE_BUILD_COMPRESS = brotli
