--- a/.env.production
+++ b/.env.production
@@ -1,18 +1,17 @@
 VITE_MODE_NAME=production
 VITE_APP_PORT=3005
 VITE_HASH_ROUTE=false
-
 # 标题
 VITE_APP_TITLE=ace-admin
 # 接口请求地址，对应axios的baseURL参数
 VITE_APP_BASE_API='/api'
-# 开发接口环境可自定义
+# 后端地址
 # VITE_API_URL='https://mock.apifox.cn/m1/2120640-0-2c46b26a'
 VITE_API_URL='http://look4u.top:8081'
 # 是否开启代理
 VITE_OPEN_PROXY=false
 # 是否使用mock
-VITE_USE_MOCK=true
+VITE_USE_MOCK=false
 # 是否在打包时生成 sourcemap
 VITE_BUILD_SOURCEMAP=false
 # 是否在打包时删除 console 代码
