--- a/.env.development
+++ b/.env.development
@@ -5,18 +5,18 @@ VITE_HASH_ROUTE=false
 VITE_APP_TITLE=ace-admin
 # 接口请求地址，对应axios的baseURL参数
 VITE_APP_BASE_API='/api'
-# 开发接口环境可自定义
+# 后端地址
 VITE_API_URL='http://look4u.top:8081'
 # 是否开启代理
 VITE_OPEN_PROXY=false
 # 是否使用mock
-VITE_USE_MOCK=true
+VITE_USE_MOCK=false
 # 是否在打包时生成 sourcemap
 VITE_BUILD_SOURCEMAP=false
 # 是否在打包时删除 console 代码
-VITE_BUILD_DROP_CONSOLE=true
+VITE_BUILD_DROP_CONSOLE=false
 # 是否在打包时删除 debugger 代码
-VITE_BUILD_DROP_DEBUGGER=true
+VITE_BUILD_DROP_DEBUGGER=false
 VITE_BUILD_COMPRESS=false
 # 是否在打包时开启压缩 gzip | brotli
 #用gizp： VITE_BUILD_COMPRESS = gzip
