--- a/.env.test
+++ b/.env.test
@@ -6,12 +6,12 @@ VITE_HASH_ROUTE=true
 VITE_APP_TITLE=ace-admin
 # vercel直接设置好路径
 VITE_APP_BASE_API='/api'
-# 开发接口环境可自定义
+# 后端地址
 VITE_API_URL='http://look4u.top:8081'
 # 是否开启代理
 VITE_OPEN_PROXY=false
 # 是否使用mock
-VITE_USE_MOCK=true
+VITE_USE_MOCK=false
 # 是否在打包时生成 sourcemap
 VITE_BUILD_SOURCEMAP=false
 # 是否在打包时删除 console 代码
