--- a/.env.development
+++ b/.env.development
@@ -6,7 +6,7 @@ VITE_APP_TITLE=ace-admin
 # 接口请求地址，对应axios的baseURL参数
 VITE_APP_BASE_API='/api'
 # 后端地址
-VITE_API_URL='http://look4u.top:8081'
+VITE_API_URL='http://localhost:8081'
 # 是否开启代理
 VITE_OPEN_PROXY=false
 # 是否使用mock
