--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,7 @@
 # Vercel用该环境
 VITE_MODE_NAME=test
 VITE_APP_PORT=3005
-VITE_HASH_ROUTE=true
+VITE_HASH_ROUTE=false
 # 标题
 VITE_APP_TITLE=ace-admin
 # vercel直接设置好路径
