--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "lint:eslint": "eslint . --fix",
     "lint:prettier": "prettier --write src/**/*.{ts,vue,js,tsx,jsx,json}",
-    "lint:stylelint": "stylelint .",
+    "lint:stylelint": "stylelint . --fix",
     "lint:lint-staged": "lint-staged",
     "format": "prettier --write src/",
     "preinstall": "npx only-allow pnpm",
@@ -34,73 +34,73 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
-    "@vueuse/core": "^10.7.1",
-    "@vueuse/motion": "^2.1.0",
-    "ant-design-vue": "~4.1.2",
+    "@vueuse/core": "^10.11.0",
+    "@vueuse/motion": "^2.2.3",
+    "ant-design-vue": "~4.2.3",
     "axios": "^1.7.2",
-    "dayjs": "^1.11.10",
-    "echarts": "^5.5.0",
-    "gsap": "^3.12.4",
+    "dayjs": "^1.11.11",
+    "echarts": "^5.5.1",
+    "gsap": "^3.12.5",
     "lodash-es": "^4.17.21",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
-    "vue": "^3.4.30",
+    "vue": "^3.4.31",
     "vue-echarts": "latest",
-    "vue-i18n": "^9.9.0",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.4",
-    "@commitlint/config-conventional": "^18.4.4",
-    "@iconify-json/ep": "^1.1.14",
-    "@iconify-json/ion": "^1.1.15",
-    "@iconify-json/mdi": "^1.1.64",
-    "@iconify-json/ri": "^1.1.18",
-    "@iconify/vue": "^4.1.1",
-    "@rushstack/eslint-patch": "^1.6.1",
-    "@tsconfig/node18": "^18.2.2",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@iconify-json/ep": "^1.1.15",
+    "@iconify-json/ion": "^1.1.18",
+    "@iconify-json/mdi": "^1.1.67",
+    "@iconify-json/ri": "^1.1.21",
+    "@iconify/vue": "^4.1.2",
+    "@rushstack/eslint-patch": "^1.10.3",
+    "@tsconfig/node18": "^18.2.4",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^18.19.5",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@types/node": "^18.19.39",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "@vitejs/plugin-vue-jsx": "^4.0.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
-    "eslint": "^9.5.0",
+    "eslint": "^9.6.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import-x": "^0.5.2",
+    "eslint-plugin-import-x": "^0.5.3",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.26.0",
+    "eslint-plugin-vue": "^9.27.0",
     "fast-glob": "3.2.11",
-    "lint-staged": "^15.2.2",
-    "npm-run-all2": "^6.1.1",
-    "prettier": "^3.2.5",
+    "lint-staged": "^15.2.7",
+    "npm-run-all2": "^6.2.0",
+    "prettier": "^3.3.2",
     "prettier-stylelint": "^0.4.2",
     "sass": "^1.77.6",
+    "simple-git-hooks": "^2.11.1",
     "stylelint": "^16.6.1",
     "stylelint-config-recess-order": "^5.0.1",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^13.1.0",
-    "simple-git-hooks": "^2.11.1",
-    "typescript": "^5.3.3",
+    "typescript": "^5.5.3",
     "typescript-eslint": "^7.15.0",
-    "unplugin-auto-import": "^0.17.5",
-    "unplugin-icons": "^0.16.6",
-    "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.8",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-icons": "^0.19.0",
+    "unplugin-vue-components": "^0.27.2",
+    "vite": "^5.3.2",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vite-plugin-vue-devtools": "^7.0.26",
-    "vue-tsc": "^2.0.11"
+    "vite-plugin-vue-devtools": "^7.3.5",
+    "vue-tsc": "^2.0.24"
   },
   "lint-staged": {
     "src/**/*.{ts,vue,js,tsx,jsx,json}": [
-      "pnpm lint",
-      "pnpm lint:prettier"
+      "npm run lint:eslint",
+      "npm run lint:prettier"
     ],
-    "src/**/*.{scss,vue}": [
+    "*.{scss,vue,css,less}": [
       "pnpm lint:stylelint"
     ],
     "package.json": [
