feat: :sparkles: aiChat

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dayjs": "^1.11.11",
     "echarts": "^5.5.1",
     "gsap": "^3.12.5",
+    "highlight.js": "^11.10.0",
     "lodash-es": "^4.17.21",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
