--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gsap": "^3.12.5",
     "highlight.js": "^11.10.0",
     "lodash-es": "^4.17.21",
+    "marked": "^13.0.2",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
