fix: :bug: chat

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ant-design-vue": "~4.2.3",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "dompurify": "^3.1.6",
     "echarts": "^5.5.1",
     "gsap": "^3.12.5",
     "highlight.js": "^11.10.0",
@@ -64,6 +65,7 @@
     "@iconify/vue": "^4.1.2",
     "@rushstack/eslint-patch": "^1.10.3",
     "@tsconfig/node18": "^18.2.4",
+    "@types/dompurify": "^3.0.5",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^18.19.39",
     "@vitejs/plugin-vue": "^5.0.5",
