fix: :bug: tinymce and i18n

--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "echarts": "^5.5.1",
     "gsap": "^3.12.5",
     "highlight.js": "^11.10.0",
-    "lodash-es": "^4.17.21",
     "marked": "^13.0.2",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "radash": "^12.1.0",
     "tinymce": "^7.2.1",
     "tinymce-i18n": "^24.7.1",
     "vue": "^3.4.31",
