--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "radash": "^12.1.0",
     "tinymce": "^7.2.1",
     "tinymce-i18n": "^24.7.1",
-    "vue": "^3.4.31",
+    "vue": "^3.5",
     "vue-echarts": "latest",
-    "vue-i18n": "^9.13.1",
+    "vue-i18n": "^10",
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
@@ -70,16 +70,16 @@
     "@types/node": "^18.19.39",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/eslint-config-prettier": "^10",
+    "@vue/eslint-config-typescript": "^14",
     "@vue/tsconfig": "^0.5.1",
     "commitizen": "^4.3.0",
     "cz-git": "^1.9.3",
-    "eslint": "^9.6.0",
+    "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import-x": "^0.5.3",
+    "eslint-plugin-import-x": "^4",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.27.0",
+    "eslint-plugin-vue": "^9.28.0",
     "fast-glob": "3.2.11",
     "lint-staged": "^15.2.7",
     "npm-run-all2": "^6.2.0",
@@ -91,12 +91,12 @@
     "stylelint-config-recess-order": "^5.0.1",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^13.1.0",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^7.15.0",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-icons": "^0.19.0",
     "unplugin-vue-components": "^0.27.2",
-    "vite": "^5.3.2",
+    "vite": "^5",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^7.3.5",
@@ -106,6 +106,11 @@
     "commitizen": {
       "path": "node_modules/cz-git"
     }
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged",
+    "commit-msg": "npx commitlint -e $1",
+    "pre-push": "pnpm lint:prettier"
   },
   "lint-staged": {
     "src/**/*.{ts,vue,js,tsx,jsx,json}": [
