--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "radash": "^12.1.0",
     "tinymce": "^7.2.1",
     "tinymce-i18n": "^24.7.1",
-    "vue": "^3.5",
+    "vue": "~3.5",
     "vue-echarts": "latest",
     "vue-i18n": "^10",
     "vue-router": "^4.4.0"
@@ -91,7 +91,7 @@
     "stylelint-config-recess-order": "^5.0.1",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^13.1.0",
-    "typescript": "^5.5.4",
+    "typescript": "5.5.4",
     "typescript-eslint": "^8",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-icons": "^0.19.0",
