build: 更新 TS 配置并添加前端路由回退
- 修改 tsconfig.app.json 和 tsconfig.node.json，使用相对路径引用扩展配置
- 在 vercel.json 中添加前端路由回退规则，确保前端路由正确运行

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/api/(.*)",
       "destination": "http://look4u.top:8081/$1"
+    },
+    {
+      "source": "/((?!api\/.*).*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
