--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,4 +1,4 @@
-name:Form Bug Report  # 问题报告模板名称
+name:Bug Report  # 问题报告模板名称
 description:(推荐使用Form模板进行描述) File a bug report use form.  # 描述：提交一个错误报告
 title: "[Bug]: "  # 问题标题前缀
 labels: ["bug", "triage"]  # 自动添加的标签
