--- a/package.json
+++ b/package.json
@@ -88,9 +88,10 @@
     "sass": "^1.77.6",
     "simple-git-hooks": "^2.11.1",
     "stylelint": "^16.6.1",
-    "stylelint-config-recess-order": "^5.0.1",
-    "stylelint-config-recommended-vue": "^1.5.0",
-    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-config-recess-order": "6.0.0",
+    "stylelint-config-recommended-vue": "^1.6.0",
+    "stylelint-config-standard-scss": "14.0.0",
+    "stylelint-scss": "^6.11.1",
     "typescript": "5.5.4",
     "typescript-eslint": "^8",
     "unplugin-auto-import": "^0.17.6",
