chore: add VSCode settings for auto-saving, formatting, and ESLint configuration

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,7 @@ coverage
 
 # Editor directories and files
 node_modules
-.vscode/*
-!.vscode/extensions.json
+#.vscode/*
 .idea
 .fleet
 *.suo
@@ -29,4 +28,3 @@ node_modules
 *.sln
 *.sw?
 *.yaml
-/.vscode/extensions.json
