build(deps): 更新依赖并配置 VSCode
- 更新多个依赖库版本，包括 vue、axios、pinia 等
- 新增 VSCode 扩展推荐配置
- 调整 ESLint 和 Stylelint 配置
- 更新 TypeScript 相关依赖

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ coverage
 
 /cypress/videos/
 /cypress/screenshots/
+/types/auto-imports.d.ts
+!/types/components.d.ts
+!/types/auto-imports.d.ts
 
 # Editor directories and files
 node_modules
