chore: update deployment branches to include 'monorepo'

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy Vue Ace Admin
 
 on:
   push:
-    branches: [main, master]
+    branches: [main, master, monorepo]
   pull_request:
     branches: [main, master]
 
