--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "homepage": "https://github.com/codexlin/vue-ace-admin#readme",
   "engines": {
-    "node": ">=18.0.0"
+    "node": "20.x"
   },
-  "packageManager": "pnpm@8.9.2",
+  "packageManager": "pnpm@10",
   "keywords": [
     "vue3",
     "typescript",
