--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
 
       - name: Setup pnpm
         run: |
+          corepack enable
           corepack prepare pnpm@${{ env.PNPM_VERSION }} --activate
 
       - name: Install dependencies
@@ -59,6 +60,7 @@ jobs:
 
       - name: Setup pnpm
         run: |
+          corepack enable
           corepack prepare pnpm@${{ env.PNPM_VERSION }} --activate
 
       - name: Install dependencies
@@ -89,6 +91,7 @@ jobs:
 
       - name: Setup pnpm
         run: |
+          corepack enable
           corepack prepare pnpm@${{ env.PNPM_VERSION }} --activate
 
       - name: Install dependencies
