--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,9 @@ name: Deploy Vue Ace Admin
 
 on:
   push:
-    branches: [monorepo]
+    branches: [main]
   pull_request:
-    branches: [monorepo]
+    branches: [main]
 
 env:
   NODE_VERSION: '20'
@@ -76,7 +76,7 @@ jobs:
 
   publish-ui:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/monorepo' && contains(github.event.head_commit.message, 'release:ui')
+    if: github.ref == 'refs/heads/main' && contains(github.event.head_commit.message, 'release:ui')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -104,7 +104,7 @@ jobs:
 
   docker-build:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/monorepo'
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -112,7 +112,19 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Check if Docker credentials exist
+        id: docker-check
+        run: |
+          if [ -n "${{ secrets.DOCKER_USERNAME }}" ]; then
+            echo "has_creds=true" >> $GITHUB_OUTPUT
+            echo "docker_image=${{ secrets.DOCKER_USERNAME }}/vue-ace-admin" >> $GITHUB_OUTPUT
+          else
+            echo "has_creds=false" >> $GITHUB_OUTPUT
+            echo "docker_image=vue-ace-admin" >> $GITHUB_OUTPUT
+          fi
+
       - name: Login to Docker Hub
+        if: steps.docker-check.outputs.has_creds == 'true'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -122,7 +134,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKER_USERNAME }}/vue-ace-admin
+          images: ${{ steps.docker-check.outputs.docker_image }}
           tags: |
             type=ref,event=branch
             type=ref,event=pr
@@ -133,7 +145,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          push: true
+          push: ${{ steps.docker-check.outputs.has_creds == 'true' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
