--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "build:ui": "pnpm -C packages/ui build"
   },
   "dependencies": {
-    "@ace-admin/hooks": "workspace:*",
-    "@ace-admin/ui": "workspace:*",
+    "@codexlin/ace-admin-hooks": "workspace:*",
+    "@codexlin/ace-admin-ui": "workspace:*",
     "@ant-design/icons-vue": "^7.0.1",
     "@tinymce/tinymce-vue": "^6.1.0",
     "@vueuse/core": "^13.0.0",
