fix: 更新 TypeScript 配置以支持新的包名
- 更新 packages/ui/tsconfig.json 中的路径别名
- 在 tsconfig.app.json 中添加 workspace 包的路径映射
- 确保 TypeScript 能正确解析 @codexlin/ace-admin-ui 和 @codexlin/ace-admin-hooks

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -17,7 +17,7 @@
     "esModuleInterop": true,
     "types": ["vite/client", "node"],
     "paths": {
-      "vue-ace-admin-ui": ["./src/index.ts"]
+      "@codexlin/ace-admin-ui": ["./src/index.ts"]
     }
   },
   "include": ["src/**/*", "src/**/*.vue"],
