refactor: 修复 TypeScript 项目引用配置并优化 UI 库结构
- 修复 tsconfig.app.json 项目引用配置，解决 hooks 包类型检查错误
- 保留 BaseUpload 组件，后续会使用
- 将 TinyMCE 组件移至主应用，UI 库不再包含业务组件
- 移除 UI 库中无意义的 hooks 包装，直接使用 hooks 包
- 优化 message 工具函数位置（hooks -> utils）
- 更新文档结构和内容
- 添加 tsbuildinfo 到 gitignore

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -15,10 +15,7 @@
     "noEmitOnError": false,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "types": ["vite/client", "node"],
-    "paths": {
-      "@codexlin/ace-admin-ui": ["./src/index.ts"]
-    }
+    "types": ["vite/client", "node"]
   },
   "include": ["src/**/*", "src/**/*.vue"],
   "exclude": ["node_modules", "dist", "**/*.test.*", "**/__tests__/*"],
