--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,5 +12,13 @@
     },
     "moduleResolution": "node",
     "lib": ["ESNext", "DOM"]
-  }
+  },
+  "references": [
+    {
+      "path": "./packages/hooks/tsconfig.json"
+    },
+    {
+      "path": "./packages/ui/tsconfig.json"
+    }
+  ]
 }
