fix: 修复 lint-staged 配置，确保提交前自动格式化并暂存文件
- 修改 lint-staged 配置，直接使用 eslint 和 prettier 命令
- lint-staged 会自动传递文件列表给这些命令
- lint-staged 15.x 会自动暂存格式化后的文件
- 这样只会格式化暂存的文件，不会影响其他文件
- 解决提交后需要再次提交格式化文件的问题

--- a/package.json
+++ b/package.json
@@ -126,12 +126,15 @@
     "pre-push": "pnpm lint:prettier"
   },
   "lint-staged": {
-    "src/**/*.{ts,vue,js,tsx,jsx,json}": [
-      "pnpm lint:eslint",
-      "pnpm lint:prettier"
+    "src/**/*.{ts,vue,js,tsx,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "src/**/*.json": [
+      "prettier --write"
     ],
     "*.{scss,vue}": [
-      "pnpm stylelint:fix"
+      "stylelint --fix"
     ],
     "package.json": [
       "prettier --write"
