fix(docs): 修复文档构建时 CSS 文件路径问题
- 将 CSS 引入从相对路径改为使用包名 @codexlin/ace-admin-ui/style.css
- 在 Vite 配置中添加 CSS 文件的 alias 解析
- 更新 build:docs 脚本，确保先构建 hooks 和 UI 包再构建文档

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "postinstall": "npx simple-git-hooks",
     "commit": "git-cz",
     "dev:docs": "pnpm -C docs dev",
-    "build:docs": "pnpm -C docs build",
+    "build:docs": "pnpm run build:hooks && pnpm run build:ui && pnpm -C docs build",
     "build:hooks": "pnpm -C packages/hooks build",
     "dev:ui": "pnpm -C packages/ui dev",
     "build:ui": "pnpm -C packages/ui build"
