--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "build:ui": "pnpm -C packages/ui build"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^7.0.1",
     "@codexlin/ace-admin-hooks": "workspace:*",
     "@codexlin/ace-admin-ui": "workspace:*",
-    "@ant-design/icons-vue": "^7.0.1",
     "@tinymce/tinymce-vue": "^6.1.0",
     "@vueuse/core": "^13.0.0",
     "@vueuse/motion": "^3.0.3",
@@ -95,15 +95,16 @@
     "fast-glob": "3.3.3",
     "lint-staged": "^15.5.0",
     "npm-run-all2": "^7.0.2",
+    "postcss": "8.4.49",
+    "postcss-scss": "4.0.9",
     "prettier": "^3.5.3",
     "prettier-stylelint": "^0.4.2",
     "sass": "^1.86.3",
     "simple-git-hooks": "^2.12.1",
     "stylelint": "^16.18.0",
     "stylelint-config-recess-order": "6.0.0",
-    "stylelint-config-recommended-vue": "^1.6.0",
-    "stylelint-config-standard-scss": "14.0.0",
-    "stylelint-scss": "^6.11.1",
+    "stylelint-config-recommended-vue": "1.5.0",
+    "stylelint-config-standard-scss": "13.1.0",
     "typescript": "5.5.4",
     "typescript-eslint": "^8",
     "unplugin-auto-import": "^19.1.2",
@@ -132,6 +133,9 @@
     ],
     "src/**/*.json": [
       "prettier --write"
+    ],
+    "*.{scss,vue}": [
+      "stylelint --fix"
     ],
     "package.json": [
       "prettier --write"
