feat: add API best practices documentation and TypeScript generics optimization guide

--- a/.prettierrc
+++ b/.prettierrc
@@ -9,5 +9,7 @@
   "htmlWhitespaceSensitivity": "strict",
   "endOfLine": "auto",
   "arrowParens": "always",
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "vueIndentScriptAndStyle": false,
+  "singleAttributePerLine": false
 }
