--- a/.editorconfig
+++ b/.editorconfig
@@ -7,3 +7,15 @@ indent_size = 2
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.md]
+trim_trailing_whitespace = false
+
+[*.{json,yml,yaml}]
+indent_size = 2
+
+[*.{js,ts,jsx,tsx,vue}]
+indent_size = 2
+
+[Makefile]
+indent_style = tab
